--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "SET NODE_ENV=production&nodemon server.js",
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
