--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
     "firebase": "^9.21.0",
     "helmet": "^6.1.5",
@@ -27,6 +28,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "xss": "^1.0.14",
+    "xss-clean": "^0.1.1"
   }
 }
